--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
 table {
-  width: 100%;
+
 }
 
 td {
   border: 1px solid black;
 }
+
+.bigBox {
+  border: 3px solid black;
+}
+
+
+
 td:nth-child(1){
   border-left: none;
 }
@@ -18,7 +25,14 @@ tr:nth-child(3) td {
   border-bottom: none;
 }
 button {
-  width: 100%;
-  height: 8vh;
-  background-size: contain no-repeat;
+  width: 60px;
+  height: 60px;
+  background-size: 100% 100%;
+  background-color: #FFFFFF;
+  border: none;
+}
+
+img {
+  width: 197px;
+  height: 197px;
 }
